2009-02-09  Mikael Djurfeldt  <mdj@lampetra.csc.kth.se>

	* music/subconnector.hh,
	subconnector.cc (InputSubconnector::flushed): Bugfix: Initialize.

	* error.cc, music/error.hh (error0): Report errors only from MPI
	process rank 0.

	* music/temporal.hh, temporal.cc: Implemented distribution of
	allowed buffering using a loop detection algorithm.

2009-02-08  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* FIBO.cc, connector.cc, music/FIBO.hh, music/connector.hh,
	music/event.hh, music/runtime.hh, music/subconnector.hh,
	music/synchronizer.hh, runtime.cc, subconnector.cc,
	synchronizer.cc: Flush buffers at MUSIC::finalize.

2009-02-06  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/connector.hh, music/spatial.hh, music/synchronizer.hh,
	music/temporal.hh, port.cc, spatial.cc, synchronizer.cc,
	temporal.cc: Compute default maxBuffered value based on
	temporal.hh:DEFAULT_PACKET_SIZE.

2009-02-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/setup.hh, music/synchronizer.hh, music/temporal.hh,
	runtime.cc, setup.cc, temporal.cc: Bugfix: Convert accLatency to
	ClockStateT.

	* clock.cc, connectivity.cc, connector.cc, music/clock.hh,
	music/connectivity.hh, music/connector.hh, music/debug.hh,
	music/runtime.hh, music/setup.hh, music/synchronizer.hh,
	music/temporal.hh, runtime.cc, setup.cc, spatial.cc,
	synchronizer.cc, temporal.cc: Timing for applications with
	different inter-tick-intervals may now work.

2009-01-27  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* clock.cc, connector.cc, music/clock.hh, music/connector.hh,
	music/runtime.hh, music/setup.hh, music/synchronizer.hh,
	music/temporal.hh, port.cc, runtime.cc, setup.cc, subconnector.cc,
	synchronizer.cc, temporal.cc: First steps of the timing algorithm.

2008-12-02  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* Switch to CamelCase.

2008-11-05  Mikael Djurfeldt  <mikael@djurfeldt.com>

	* music/interval_tree.hh: Bugfix: Compute the size of the binary
	tree correctly.
